test_suite/tests/ui/borrow/empty_lifetimes.stderr
error: at least one lifetime must be borrowed
 --> tests/ui/borrow/empty_lifetimes.rs:5:22
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
4 | struct Test<'a> {
5 |     #[serde(borrow = "")]
  |                      ^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: at least one lifetime must be borrowed
 --> tests/ui/borrow/empty_lifetimes.rs:7:22
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
...
7 |     #[serde(borrow = "  ")]
  |                      ^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
